--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "front-collection",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "v20.11.1",
+    "npm": "v10.2.4",
+    "pnpm": "9.15.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
