--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "pnpm": "9.15.0"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack -p 3011",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "next": "15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tree-cli": "^0.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
