--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "tree-cli": "^0.6.7"
   },
   "devDependencies": {
